fix: correct visible button default value settings

--- a/src/contentscript/overlay/root/components/InputPanelSettings/InputPanelSettings.module.scss
+++ b/src/contentscript/overlay/root/components/InputPanelSettings/InputPanelSettings.module.scss
@@ -46,7 +46,7 @@
   }
 
   &:active {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='16' viewBox='0 0 15 16' fill='none'%3E%3Cpath d='M0.998869 0H2.99887V2.55709C4.18888 1.622 5.68947 1.0643 7.32031 1.0643C11.1863 1.0643 14.3203 4.19831 14.3203 8.0643C14.3203 11.9303 11.1863 15.0643 7.32031 15.0643C5.16982 15.0643 3.24583 14.0946 1.96176 12.5685L3.58108 11.3837C4.49698 12.4147 5.83279 13.0643 7.32031 13.0643C10.0817 13.0643 12.3203 10.8257 12.3203 8.0643C12.3203 5.30288 10.0817 3.0643 7.32031 3.0643C6.23347 3.0643 5.22762 3.41107 4.40737 4L6.99887 4V6H0.998869V0Z' fill='%232A2A2A'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='16' viewBox='0 0 15 16' fill='none'%3E%3Cpath d='M0.998869 0H2.99887V2.55709C4.18888 1.622 5.68947 1.0643 7.32031 1.0643C11.1863 1.0643 14.3203 4.19831 14.3203 8.0643C14.3203 11.9303 11.1863 15.0643 7.32031 15.0643C5.16982 15.0643 3.24583 14.0946 1.96176 12.5685L3.58108 11.3837C4.49698 12.4147 5.83279 13.0643 7.32031 13.0643C10.0817 13.0643 12.3203 10.8257 12.3203 8.0643C12.3203 5.30288 10.0817 3.0643 7.32031 3.0643C6.23347 3.0643 5.22762 3.41107 4.40737 4L6.99887 4V6H0.998869V0Z' fill='%23588CA3'/%3E%3C/svg%3E");
   }
 }
 
